Removed default browser margins causing layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,8 @@ body {
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -114,6 +116,7 @@ h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
   font-weight: 500;
+  margin: 0;
 }
 
 h3,
@@ -180,9 +183,9 @@ header figure {
 }
 
 .header-divider {
-  width: 100%;
+  background: #3a3a3a;
   height: 1px;
-  color: #3a3a3a;
+  width: 100%;
   margin: 10px 0 20px 0;
 }
 
